Fixed spacing issue

--- a/src/sections/Hero/style.module.scss
+++ b/src/sections/Hero/style.module.scss
@@ -11,7 +11,7 @@
         display: flex;
         margin-left: auto;
         margin-right: auto;
-        margin-top: -300px;
+        margin-top: -350px;
         justify-content: center;
         flex-direction: column;
         text-align: center;
